<resources>
    <string name="app_name">PracaDyplomowa</string>
    <string name="token">token</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_builds">Builds</string>
    <string name="title_activity_build">Build</string>
    <string name="title_activity_building_list">Buildings</string>
    <string name="title_activity_building">Building</string>
    <string name="title_activity_component_type_list">Component types</string>
    <string name="title_activity_component_type">Component type</string>
    <string name="title_activity_component">Component</string>
    <string name="title_activity_component_list">Component list</string>
    <string name="title_activity_tokens">Tokens</string>
    <string name="title_activity_add">Add</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">Login</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_register">Register</string>
    <string name="error_not_unique_username">not uniue username</string>
    <string name="error_not_unique_email">not unique email</string>
    <string name="show_all_tokens">show all tokens</string>
    <string name="show_all_builds">show all builds</string>
    <string name="show_all_component_types">show all component types</string>
    <string name="show_all_components">show all components</string>

    <!--utils-->
    <string name="never_edited">Never edited</string>
    <string name="show_all_buildings">show all buildings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_name">name</string>
    <string name="add_or_edit_type">add or edit type</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_add">add</string>
    <string name="string_update">update</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">yes</string>
    <string name="loading_data">Loading data…</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">edit</string>
    <string name="refresh">refresh</string>
    <string name="synchronize">synchronize</string>
    <string name="action_favorite">favorite</string>
    <string name="myphoto">myPhoto</string>
    <string name="camera">camera</string>
    <string name="add_photo">add photo</string>
    <string name="chose_file_from_gallery">chose file from gallery</string>
    <string name="google_api_key">AIzaSyDLg8ds6UKmy711JzrAHyhbg2EZqKgKvSU</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Give permissions</string>
    <string name="default_info_snippet">domyślna podpowiedź</string>
    <string name="pick_place">pick place</string>
    <string name="date_end">date end</string>
    <string name="date_start">date start</string>
</resources>
