<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/components_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all_components"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/builds_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all_builds"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/component_types_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all_component_types"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/building_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all_buildings"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/tokens_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all_tokens"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/add_or_edit_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_or_edit_type"
                android:textAlignment="viewStart" />
        </LinearLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view" />


</android.support.v4.widget.DrawerLayout>